fixed wrong notify message bug. fixed firefox z-index issue. moved fork on github link and pointed to new metamaps repo

--- a/app/assets/stylesheets/clean.css
+++ b/app/assets/stylesheets/clean.css
@@ -30,6 +30,7 @@
   width: 100%;
   height: 100%;
   margin:0;
+  z-index: 0;
 }
 
 #yield {
